--- a/fotos.html
+++ b/fotos.html
@@ -18,6 +18,18 @@
   <div class="go-top">
     <span class="fas fa-angle-up"></span>
   </div>
+  <div class="search">
+    <form action="#">
+        <input type="text"
+            placeholder="Buscar"
+            name="search">
+        <button>
+            <i class="fa fa-search"
+                style="font-size: 18px;">
+            </i>
+        </button>
+    </form>
+  </div>
 
     <!-- Menu de Navegacion -->
     <header id="header">
