--- a/index.html
+++ b/index.html
@@ -19,18 +19,7 @@
     <span class="fas fa-angle-up"></span>
   </div>
 
-  <div class="search">
-    <form action="#">
-        <input type="text"
-            placeholder="Buscar"
-            name="search">
-        <button>
-            <i class="fa fa-search"
-                style="font-size: 18px;">
-            </i>
-        </button>
-    </form>
-  </div>
+
     <!-- Menu de Navegacion -->
     <header id="header">
       <nav class="menu">
@@ -40,29 +29,26 @@
        </div>
        
        <div class="list-container">
-          <ul class="lists">
-              <li><a href="index.html">Inicio</a></li>
-              <li><a href="#">Nosotros</a></li>
-              <li><a href="servicio.html">Servicios</a></li>
-              <li><a href="#">Mision</a></li>
-              <li><a href="vision.html">Vision</a></li>
-              <li><a href="fotos.html">Fotos</a></li>
-              <li><a href="#">Contacto</a></li>
-              <li><a href="login.html" class="active">Login</a></li>
-          </ul>
-          <div class="search">
-            <form action="#">
-                <input type="text"
-                    placeholder="Buscar"
-                    name="search">
-                <button>
-                    <i class="fa fa-search"
-                        style="font-size: 18px;">
-                    </i>
-                </button>
-            </form>
-          </div>
-       </div>
+        <ul class="lists">
+            <li><a href="index.html" class="active">Inicio</a></li>
+            <li><a href="#">Nosotros</a></li>
+            <li><a href="servicio.html">Servicios</a></li>
+            <li><a href="#">Mision</a></li>
+            <li><a href="vision.html">Vision</a></li>
+            <li><a href="fotos.html">Fotos</a></li>
+            <li><a href="#">Contacto</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li>
+              <div class="buscar">
+                <input type="text" placeholder="Buscar" required />
+          
+                <div class="btn">
+                  <i class="fas fa-search icon"></i>
+                </div>
+              </div>
+            </li>
+        </ul>
+     </div>
       </nav>
  
     </header>
