--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Artistas de la Web | Inicio</title>
+    <title>La Esquinita Creativa | Login</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -26,19 +26,7 @@
        <h1><a href="#">La Esquinita Creativa</a></h1>
        <span class="btn-menu"><i class="fas fa-bars"></i></span>
      </div>
-     <div class="search">
-        <form action="#">
-            <input type="text"
-                placeholder="Buscar"
-                name="search">
-            <button>
-                <i class="fa fa-search"
-                    style="font-size: 18px;">
-                </i>
-            </button>
-        </form>
-      </div>
-     
+
      <div class="list-container">
         <ul class="lists">
             <li><a href="index.html">Inicio</a></li>
@@ -50,6 +38,13 @@
             <li><a href="#">Contacto</a></li>
             <li><a href="login.html" class="active">Login</a></li>
             <li>
+              <div class="buscar">
+                <input type="text" placeholder="Buscar" required />
+          
+                <div class="btn">
+                  <i class="fas fa-search icon"></i>
+                </div>
+              </div>
             </li>
         </ul>
      </div>
