--- a/vision.html
+++ b/vision.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Artistas de la Web | Inicio</title>
+    <title>La Esquinita Creativa | Visión</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -18,18 +18,6 @@
   <div class="go-top">
     <span class="fas fa-angle-up"></span>
   </div>
-  <div class="search">
-    <form action="#">
-        <input type="text"
-            placeholder="Buscar"
-            name="search">
-        <button>
-            <i class="fa fa-search"
-                style="font-size: 18px;">
-            </i>
-        </button>
-    </form>
-  </div>
 
     <!-- Menu de Navegacion -->
     <header id="header">
@@ -38,19 +26,28 @@
          <h1><a href="#">La Esquinita Creativa</a></h1>
          <span class="btn-menu"><i class="fas fa-bars"></i></span>
        </div>
-       
+
        <div class="list-container">
-          <ul class="lists">
-              <li><a href="index.html">Inicio</a></li>
-              <li><a href="#">Nosotros</a></li>
-              <li><a href="servicio.html">Servicios</a></li>
-              <li><a href="#">Mision</a></li>
-              <li><a href="vision.html">Vision</a></li>
-              <li><a href="fotos.html">Fotos</a></li>
-              <li><a href="#">Contacto</a></li>
-              <li><a href="login.html" class="active">Login</a></li>
-          </ul>
-       </div>
+        <ul class="lists">
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="#">Nosotros</a></li>
+            <li><a href="servicio.html">Servicios</a></li>
+            <li><a href="#">Mision</a></li>
+            <li><a href="vision.html" class="active">Vision</a></li>
+            <li><a href="fotos.html">Fotos</a></li>
+            <li><a href="#">Contacto</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li>
+              <div class="buscar">
+                <input type="text" placeholder="Buscar" required />
+          
+                <div class="btn">
+                  <i class="fas fa-search icon"></i>
+                </div>
+              </div>
+            </li>
+        </ul>
+     </div>
       </nav>
    
       </header>
@@ -65,7 +62,6 @@
 
  <!-- Footer -->
  <footer class="footer">
-   <div class="skew-arriba"></div>
   <div class="deg-footer"></div>
  
   <div class="ejeZfooter">
