--- a/fotos.html
+++ b/fotos.html
@@ -33,10 +33,10 @@
           <ul class="lists">
               <li><a href="index.html">Inicio</a></li>
               <li><a href="#">Nosotros</a></li>
-              <li><a href="servicio.html" class="active">Servicios</a></li>
+              <li><a href="servicio.html" >Servicios</a></li>
               <li><a href="#">Mision</a></li>
               <li><a href="vision.html">Vision</a></li>
-              <li><a href="fotos.html">Fotos</a></li>
+              <li><a href="fotos.html" class="active">Fotos</a></li>
               <li><a href="#">Contacto</a></li>
               <li><a href="login.html">Login</a></li>
               <li>
