--- a/mision.html
+++ b/mision.html
@@ -33,8 +33,8 @@
           <li><a href="index.html">Inicio</a></li>
           <li><a href="nosotros.html">Nosotros</a></li>
           <li><a href="servicio.html" >Servicios</a></li>
-          <li><a href="mision.html">Mision</a></li>
-          <li><a href="vision.html" class="active">Vision</a></li>
+          <li><a href="mision.html" class="active">Mision</a></li>
+          <li><a href="vision.html">Vision</a></li>
           <li><a href="fotos.html">Fotos</a></li>
           <li><a href="contacto.html">Contacto</a></li>
           <li><a href="login.html">Login</a></li>
@@ -62,7 +62,7 @@
  </main> 
 
  <!-- Footer -->
- <footer class="footer bg-img-vsn">
+ <footer class="footer bg-img-msn">
   <div class="deg-footer"></div>
  
   <div class="ejeZfooter">
@@ -73,14 +73,14 @@
    <!-- Testimonios -->
    <section class="testimonios">
     <div class="testimonios-title">
-     <h2>Visión</h2>
+     <h2>Misión</h2>
      <hr>
     </div>
      <div class="box-testimonio">
-      <div class="mivision-img"><img src="img/vsn.jpg" alt=""></div>
+      <div class="mivision-img"><img src="img/msn.jpg" alt=""></div>
       <div class="testimonio-text">
-        <h4></h4>
-        <p>Ser el máximo proveedor de materiales, accesorios y servicios personalizados con expansión a mayoristas empresariales.</p>
+        <h4>Nuestra principal Misión</h4>
+        <p>Proveer a padres de familia,alumnado y profesorado,materialy accesorios escolares y de oficina personalizados.</p>
       </div>
       </div>
      </div>
