--- a/nosotros.html
+++ b/nosotros.html
@@ -31,10 +31,10 @@
        <div class="list-container">
         <ul class="lists">
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="nosotros.html" class="active">Nosotros</a></li>
           <li><a href="servicio.html" >Servicios</a></li>
           <li><a href="mision.html">Mision</a></li>
-          <li><a href="vision.html" class="active">Vision</a></li>
+          <li><a href="vision.html">Vision</a></li>
           <li><a href="fotos.html">Fotos</a></li>
           <li><a href="contacto.html">Contacto</a></li>
           <li><a href="login.html">Login</a></li>
@@ -62,7 +62,7 @@
  </main> 
 
  <!-- Footer -->
- <footer class="footer bg-img-vsn">
+ <footer class="footer bg-img-nsts">
   <div class="deg-footer"></div>
  
   <div class="ejeZfooter">
@@ -73,14 +73,17 @@
    <!-- Testimonios -->
    <section class="testimonios">
     <div class="testimonios-title">
-     <h2>Visión</h2>
+     <h2>¿Quienes Somos?</h2>
      <hr>
     </div>
      <div class="box-testimonio">
-      <div class="mivision-img"><img src="img/vsn.jpg" alt=""></div>
+      <div class="mivision-img"><img src="img/nsts.jpg" alt=""></div>
       <div class="testimonio-text">
-        <h4></h4>
-        <p>Ser el máximo proveedor de materiales, accesorios y servicios personalizados con expansión a mayoristas empresariales.</p>
+        <br>
+        <p>Somos una empresa 100% mexicana dedicada a la distribución y personalización de
+            materiales de papelería de alta calidad con el objetivo de ofrecerles a nuestros
+            clientes un amplio catálogo de diseños para la personalización de los artículos con
+            el fin de generar una satisfacción en ellos.</p>
       </div>
       </div>
      </div>
