--- a/contacto.html
+++ b/contacto.html
@@ -85,7 +85,7 @@
     </div>
  
     <div class="footer-text">
-      <p>&copy; La Esquinita Creativa - 2022 | Todos los derechos reservados.</p>
+      <p>&copy; Corazón de Papel - 2022 | Todos los derechos reservados.</p>
     </div>
    
    </div>
