--- a/vision.html
+++ b/vision.html
@@ -91,7 +91,7 @@
    
 
    <div class="footer-text">
-     <p>&copy; La Esquinita Creativa - 2022 | Todos los derechos reservados.</p>
+     <p>&copy; Corazón de Papel - 2022 | Todos los derechos reservados.</p>
    </div>
   
   </div>
