--- a/fotos.html
+++ b/fotos.html
@@ -87,7 +87,7 @@
 </div>
 </section>
    <div class="footer-text">
-    <p>&copy; La Esquinita Creativa - 2022 | Todos los derechos reservados.</p>
+    <p>&copy; Corazón de Papel - 2022 | Todos los derechos reservados.</p>
    </div>
   
   </div>
