--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <div class="footer-content">
 
         <div class="footer-text">
-          <p>&copy; La Esquinita Creativa - 2022 | Todos los derechos reservados.</p>
+          <p>&copy; Corazón de Papel - 2022 | Todos los derechos reservados.</p>
         </div>
 
       </div>
