--- a/servicio.html
+++ b/servicio.html
@@ -93,7 +93,7 @@
 </section>
 </section>
    <div class="footer-text">
-     <p>&copy; La Esquinita Creativa - 2022 | Todos los derechos reservados.</p>
+     <p>&copy; Corazón de Papel - 2022 | Todos los derechos reservados.</p>
    </div>
   
   </div>
