--- a/mision.html
+++ b/mision.html
@@ -80,7 +80,7 @@
       <div class="mivision-img"><img src="img/msn.jpg" alt=""></div>
       <div class="testimonio-text">
         <h4>Nuestra principal Misión</h4>
-        <p>Proveer a padres de familia,alumnado y profesorado,materialy accesorios escolares y de oficina personalizados.</p>
+        <p>Proveer a padres de familia,alumnado y profesorado material y accesorios escolares y de oficina personalizados.</p>
       </div>
       </div>
      </div>
