--- a/nosotros.html
+++ b/nosotros.html
@@ -24,7 +24,7 @@
     <header id="header">
       <nav class="menu">
        <div class="logo-box">
-         <h1><a href="#">La Esquinita Creativa</a></h1>
+        <h1><a href="index.html">La Esquinita Creativa</a></h1>
          <span class="btn-menu"><i class="fas fa-bars"></i></span>
        </div>
 
@@ -53,53 +53,49 @@
    
       </header>
 
- <main>
+  <main>
+    <div class="principal bg-img-msn">
 
 
+      <div class="ejeZprincipal">
+        <div class="principal-content">
 
 
+          <div class="formulario-content">
+            <section class="testimonios">
+              <div class="testimonios-title">
+                <h2>¿Quienes Somos?</h2>
+                <hr>
+              </div>
+              <div class="box-testimonio">
+                <div class="mivision-img"><img src="img/nsts.jpg" alt=""></div>
+                <div class="testimonio-text">
+                  <br>
+                  <p>Somos una empresa 100% mexicana dedicada a la distribución y personalización de
+                    materiales de papelería de alta calidad con el objetivo de ofrecerles a nuestros
+                    clientes un amplio catálogo de diseños para la personalización de los artículos con
+                    el fin de generar una satisfacción en ellos.</p>
+                </div>
+              </div>
+            </section>
+          </div>
 
- </main> 
 
- <!-- Footer -->
- <footer class="footer bg-img-nsts">
-  <div class="deg-footer"></div>
- 
-  <div class="ejeZfooter">
-  <div class="footer-content">
+        </div>
+      </div>
+      <!-- Footer -->
+      <footer class="footer">
+        <div class="ejeZfooter">
+          <div class="footer-content">
+            <div class="footer-text">
+              <p>&copy; Corazón de Papel - 2022 | Todos los derechos reservados.</p>
+            </div>
 
-
-   <div class="formulario-content">
-   <!-- Testimonios -->
-   <section class="testimonios">
-    <div class="testimonios-title">
-     <h2>¿Quienes Somos?</h2>
-     <hr>
+          </div>
+        </div>
+      </footer>
     </div>
-     <div class="box-testimonio">
-      <div class="mivision-img"><img src="img/nsts.jpg" alt=""></div>
-      <div class="testimonio-text">
-        <br>
-        <p>Somos una empresa 100% mexicana dedicada a la distribución y personalización de
-            materiales de papelería de alta calidad con el objetivo de ofrecerles a nuestros
-            clientes un amplio catálogo de diseños para la personalización de los artículos con
-            el fin de generar una satisfacción en ellos.</p>
-      </div>
-      </div>
-     </div>
-     
-   </section>
-   </div>
-   
-   
-
-   <div class="footer-text">
-    <p>&copy; Corazón de Papel - 2022 | Todos los derechos reservados.</p>
-   </div>
-  
-  </div>
-</div>
- </footer>
+  </main>
 
 <!-- Scripts -->
 <script src="https://kit.fontawesome.com/35db202371.js"></script>
