--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <header id="header">
     <nav class="menu">
       <div class="logo-box">
-        <h1><a href="#">La Esquinita Creativa</a></h1>
+        <h1><a href="index.html">La Esquinita Creativa</a></h1>
         <span class="btn-menu"><i class="fas fa-bars"></i></span>
       </div>
 
