--- a/mision.html
+++ b/mision.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <title>La Esquinita Creativa | Visión</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <title>La Esquinita Creativa | Visión</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
-    <!-- Estilos Css -->
-    <link rel="stylesheet" href="css/styles.css">
+  <!-- Estilos Css -->
+  <link rel="stylesheet" href="css/styles.css">
 
-    <link href="https://fonts.googleapis.com/css?family=Red+Hat+Text:400,500,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Red+Hat+Text:400,500,700&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
 
   <!-- Ir Arriba -->
@@ -20,19 +22,19 @@
     <span class="fas fa-angle-up"></span>
   </div>
 
-    <!-- Menu de Navegacion -->
-    <header id="header">
-      <nav class="menu">
-       <div class="logo-box">
-         <h1><a href="#">La Esquinita Creativa</a></h1>
-         <span class="btn-menu"><i class="fas fa-bars"></i></span>
-       </div>
+  <!-- Menu de Navegacion -->
+  <header id="header">
+    <nav class="menu">
+      <div class="logo-box">
+        <h1><a href="index.html">La Esquinita Creativa</a></h1>
+        <span class="btn-menu"><i class="fas fa-bars"></i></span>
+      </div>
 
-       <div class="list-container">
+      <div class="list-container">
         <ul class="lists">
           <li><a href="index.html">Inicio</a></li>
           <li><a href="nosotros.html">Nosotros</a></li>
-          <li><a href="servicio.html" >Servicios</a></li>
+          <li><a href="servicio.html">Servicios</a></li>
           <li><a href="mision.html" class="active">Mision</a></li>
           <li><a href="vision.html">Vision</a></li>
           <li><a href="fotos.html">Fotos</a></li>
@@ -41,66 +43,66 @@
           <li>
             <div class="buscar">
               <input type="text" placeholder="Buscar" required />
-        
+
               <div class="btn">
                 <i class="fas fa-search icon"></i>
               </div>
             </div>
           </li>
-      </ul>
-     </div>
-      </nav>
-   
-      </header>
+        </ul>
+      </div>
+    </nav>
 
- <main>
+  </header>
 
-
-
+  <main>
+    <div class="principal bg-img-msn">
 
 
- </main> 
-
- <!-- Footer -->
- <footer class="footer bg-img-msn">
-  <div class="deg-footer"></div>
- 
-  <div class="ejeZfooter">
-  <div class="footer-content">
+      <div class="ejeZprincipal">
+        <div class="principal-content">
 
 
-   <div class="formulario-content">
-   <!-- Testimonios -->
-   <section class="testimonios">
-    <div class="testimonios-title">
-     <h2>Misión</h2>
-     <hr>
+          <div class="formulario-content">
+            <section class="testimonios">
+              <div class="testimonios-title">
+                <h2>Misión</h2>
+                <hr>
+              </div>
+              <div class="box-testimonio">
+                <div class="mivision-img"><img src="img/msn.jpg" alt=""></div>
+                <div class="testimonio-text">
+                  <h4>Nuestra principal Misión</h4>
+                  <p>Proveer a padres de familia,alumnado y profesorado material y accesorios escolares y de oficina
+                    personalizados.</p>
+                </div>
+              </div>
+            </section>
+          </div>
+
+
+        </div>
+      </div>
+      <!-- Footer -->
+      <footer class="footer">
+        <div class="ejeZfooter">
+          <div class="footer-content">
+            <div class="footer-text">
+              <p>&copy; Corazón de Papel - 2022 | Todos los derechos reservados.</p>
+            </div>
+
+          </div>
+        </div>
+      </footer>
     </div>
-     <div class="box-testimonio">
-      <div class="mivision-img"><img src="img/msn.jpg" alt=""></div>
-      <div class="testimonio-text">
-        <h4>Nuestra principal Misión</h4>
-        <p>Proveer a padres de familia,alumnado y profesorado material y accesorios escolares y de oficina personalizados.</p>
-      </div>
-      </div>
-     </div>
-     
-   </section>
-   </div>
-   <br> <br>
-   
+  </main>
 
-   <div class="footer-text">
-    <p>&copy; Corazón de Papel - 2022 | Todos los derechos reservados.</p>
-   </div>
-  
-  </div>
-</div>
- </footer>
 
-<!-- Scripts -->
-<script src="https://kit.fontawesome.com/35db202371.js"></script>
-<script src="js/app.js"></script>
+
+  <!-- Scripts -->
+  <script src="https://kit.fontawesome.com/35db202371.js"></script>
+  <script src="js/app.js"></script>
 
 </body>
+
 </html>
