--- a/nosotros.html
+++ b/nosotros.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>La Esquinita Creativa | Visión</title>
+    <title>La Esquinita Creativa | Nosotros</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -54,7 +54,7 @@
       </header>
 
   <main>
-    <div class="principal bg-img-msn">
+    <div class="principal bg-img-nsts">
 
 
       <div class="ejeZprincipal">
