--- a/servicio.html
+++ b/servicio.html
@@ -58,7 +58,7 @@
   </header>
 
   <main>
-    <div class="principal bg-img-msn">
+    <div class="principal bg-img-svs">
 
 
       <div class="ejeZprincipal">
