--- a/vision.html
+++ b/vision.html
@@ -54,7 +54,7 @@
       </header>
 
       <main>
-        <div class="principal bg-img-msn">
+        <div class="principal bg-img-vsn">
     
     
           <div class="ejeZprincipal">
